# TriArb

./: Cargo.toml  README.md
benches/: all.rs  arb.rs  arb_thru.rs  parse.rs  parser_bench.rs
config/: arb.toml
doc/: arb.md  parse.md  pricing_path.md  ws.md
examples/: mock_feed_to_ws.rs  sample_paths.rs
src/: lib.rs  main.rs  price_path.rs  ws.rs
src/arb/: config.rs  edge.rs  mod.rs  naive.rs  rayon_scan.rs
src/devtools/: mod.rs  path_sampler.rs
src/mock_feed/: hot_cache.rs  mod.rs  ws_server.rs
src/parse/: man_scan.rs  mod.rs  srd_jsn.rs
tests/: server_basic_usage.rs
