# Cargo.toml
[package]
name = "tri_arb"
version = "0.1.0"
edition = "2024"
default-run = "tri_arb"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
anyhow = "1.0.98"
fastwebsockets = { version = "0.10.0", features = ["upgrade", "unstable-split"]}
futures-util = "0.3.31"
http = "1.3.1"
tokio = { version = "1.44.2", features = ["full", "macros"] }
native-tls = "0.2.14"
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = { version = "1.6", features = ["full"]}
hyper-util = { version = "0.1.11", features = ["full"]}
webpki-roots = "0.23.0"
webpki = "0.22.4"
tokio-rustls = "0.24.0"
dashmap = "6.1.0"
rayon = "1.10.0"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-tungstenite = "0.26.2"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.9.3"
tungstenite = "0.26.2"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["async"]}

[features]
default = [
    "manual_parser",
]

serde_parser = []
manual_parser = []
print_parsed = []

[[bench]]
name = "all"
harness = false

[[bench]]
name = "arb"
harness = false

[[bench]]
name = "arb_thru"
harness = false

[[bench]]
name = "parse"
harness = false
